# cannon

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  aa__rect_8hpp.html  aa__rect_8hpp.js  aa__rect_8hpp__incl.map  aa__rect_8hpp__incl.md5  aa__rect_8hpp_source.html  aabb_8hpp.html  aabb_8hpp.js  aabb_8hpp__dep__incl.map  aabb_8hpp__dep__incl.md5  aabb_8hpp__incl.map  aabb_8hpp__incl.md5  aabb_8hpp_source.html  adam_8hpp.html  adam_8hpp__dep__incl.map  adam_8hpp__dep__incl.md5  adam_8hpp__incl.map  adam_8hpp__incl.md5  adam_8hpp_source.html  affine__controller_8hpp.html  affine__controller_8hpp__incl.map  affine__controller_8hpp__incl.md5  affine__controller_8hpp_source.html  annotated.html  annotated_dup.js  argparser_8hpp.html  argparser_8hpp__incl.map  argparser_8hpp__incl.md5  argparser_8hpp_source.html  axes_8hpp.html  axes_8hpp.js  axes_8hpp__incl.map  axes_8hpp__incl.md5  (+1769 more)
cannon/: CMakeLists.txt  fake.cpp  fake.hpp  fake.test.cpp  main.test.cpp  null.cpp
cannon/control/: CMakeLists.txt  README.md  affine_controller.cpp  affine_controller.hpp  affine_controller.test.cpp  block.hpp  in_port.cpp  in_port.hpp  lqr.cpp  lqr.hpp  lqr.test.cpp  out_port.cpp  out_port.hpp  pid.cpp  pid.hpp  pid.test.cpp  signal.hpp
cannon/control/blocks/: math.cpp  math.hpp  math.test.cpp  sources.cpp  sources.hpp
cannon/geom/: '  CMakeLists.txt  README.md  extract_triangles.cpp  extract_triangles.hpp  graph.cpp  graph.hpp  graph.test.cpp  kd_tree.cpp  kd_tree.hpp  kd_tree.test.cpp  kd_tree_indexed.cpp  kd_tree_indexed.hpp  kd_tree_indexed.test.cpp  trajectory.cpp  trajectory.hpp  trajectory.test.cpp
cannon/graphics/: 3  CMakeLists.txt  README.md  camera.cpp  camera.hpp  camera.test.cpp  character.cpp  character.hpp  character.test.cpp  cubemap.cpp  cubemap.hpp  cubemap.test.cpp  deferred_renderer.cpp  deferred_renderer.hpp  deferred_renderer.test.cpp  directional_light.cpp  directional_light.hpp  element_buffer.cpp  element_buffer.hpp  element_buffer.test.cpp  font.cpp  font.hpp  font.test.cpp  fragment_shader.cpp  fragment_shader.hpp  fragment_shader.test.cpp  framebuffer.cpp  framebuffer.hpp  framebuffer.test.cpp  light.cpp  light.hpp  light_collection.cpp  light_collection.hpp  opengl_state.cpp  opengl_state.hpp  opengl_writer.cpp  opengl_writer.hpp  point_light.cpp  point_light.hpp  projection.cpp  (+36 more)
cannon/graphics/geometry/: axes_hint.cpp  axes_hint.hpp  axes_hint.test.cpp  cube.cpp  cube.hpp  cube.test.cpp  drawable_geom.cpp  drawable_geom.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model.test.cpp  plane.cpp  plane.hpp  plane.test.cpp  screen_quad.cpp  screen_quad.hpp  screen_quad.test.cpp  sdf_volume.cpp  sdf_volume.hpp  (+7 more)
cannon/log/: CMakeLists.txt  README.md  level.cpp  level.hpp  level.test.cpp  logger.cpp  logger.hpp  logger.test.cpp  registry.cpp  registry.hpp  registry.test.cpp
cannon/logic/: CMakeLists.txt  README.md  circuit.cpp  circuit.hpp  circuit.test.cpp  cnf.cpp  cnf.hpp  cnf.test.cpp  dpll.cpp  dpll.hpp  dpll.test.cpp  form.cpp  form.hpp  form.test.cpp  read_dimacs_cnf.cpp  read_dimacs_cnf.hpp  read_dimacs_cnf.test.cpp  run_randomcnf_exps.sh  write_dimacs_cnf.cpp  write_dimacs_cnf.hpp  write_dimacs_cnf.test.cpp
cannon/math/: CMakeLists.txt  README.md  barycentric_coords.cpp  barycentric_coords.hpp  barycentric_coords.test.cpp  bignum.cpp  bignum.hpp  bignum.test.cpp  digits.cpp  digits.hpp  digits.test.cpp  divisors.cpp  divisors.hpp  divisors.test.cpp  fft.cpp  fft.hpp  fft.test.cpp  finite_diff.cpp  finite_diff.hpp  finite_diff.test.cpp  finite_diff_derivative.cpp  finite_diff_derivative.hpp  finite_diff_derivative.test.cpp  interp.cpp  interp.hpp  interp.test.cpp  lattice_points.hpp  lattice_points.test.cpp  multivariate_normal.cpp  multivariate_normal.hpp  multivariate_normal.test.cpp  nearly_equal.hpp  nearly_equal.test.cpp  palindromes.cpp  palindromes.hpp  palindromes.test.cpp  perlin.cpp  perlin.hpp  perlin.test.cpp  polynomial.cpp  (+14 more)
cannon/ml/: CMakeLists.txt  README.md  adam.cpp  adam.hpp  adam.test.cpp  bfgs.cpp  bfgs.hpp  bfgs.test.cpp  linear_programming.cpp  linear_programming.hpp  linear_programming.test.cpp  lloyd.cpp  lloyd.hpp  lloyd.test.cpp  optimization_result.cpp  optimization_result.hpp  pattern_search.cpp  pattern_search.hpp  pattern_search.test.cpp  piecewise_ilstd.cpp  piecewise_ilstd.hpp  piecewise_ilstd.test.cpp  piecewise_lstd.cpp  piecewise_lstd.hpp  piecewise_lstd.test.cpp  piecewise_recursive_lstd.cpp  piecewise_recursive_lstd.hpp  piecewise_recursive_lstd.test.cpp  rls.cpp  rls.hpp  rls.test.cpp  wolfe_conditions.cpp  wolfe_conditions.hpp  wolfe_conditions.test.cpp
cannon/physics/: CMakeLists.txt  README.md  euler_integrator.cpp  euler_integrator.hpp  euler_integrator.test.cpp  lagrangian_mechanics.cpp  lagrangian_mechanics.hpp  lagrangian_mechanics.test.cpp  rk4_integrator.cpp  rk4_integrator.hpp  rk4_integrator.test.cpp
cannon/plot/: CMakeLists.txt  README.md  axes.cpp  axes.hpp  line.cpp  line.hpp  line.test.cpp  plotter.cpp  plotter.hpp  polygon.cpp  polygon.hpp  polygon.test.cpp  scatter.cpp  scatter.hpp  scatter.test.cpp
cannon/ray/: CMakeLists.txt  README.md  aa_rect.cpp  aa_rect.hpp  aa_rect.test.cpp  aabb.cpp  aabb.hpp  aabb.test.cpp  bvh.cpp  bvh.hpp  bvh.test.cpp  camera.cpp  camera.hpp  camera.test.cpp  constant_medium.cpp  constant_medium.hpp  constant_medium.test.cpp  film.cpp  film.hpp  film.test.cpp  filter.cpp  filter.hpp  hittable.cpp  hittable.hpp  hittable.test.cpp  hittable_list.cpp  hittable_list.hpp  hittable_list.test.cpp  material.cpp  material.hpp  material.test.cpp  mesh.cpp  mesh.hpp  mesh.test.cpp  moving_sphere.cpp  moving_sphere.hpp  moving_sphere.test.cpp  ray.cpp  ray.hpp  ray.test.cpp  (+15 more)
cannon/utils/: CMakeLists.txt  README.md  argparser.cpp  argparser.hpp  argparser.test.cpp  blocking_queue.hpp  blocking_queue.test.cpp  class_forward.hpp  experiment_runner.hpp  experiment_runner.test.cpp  experiment_writer.hpp  experiment_writer.test.cpp  statistics.cpp  statistics.hpp  statistics.test.cpp  thread_pool.hpp  thread_pool.test.cpp
(+16364 files in other folders)
